GERMAN: German RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73622 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_de.properties
@@ -11,10 +11,10 @@ label.manual=Manuell
 label.completedBy=Abgeschlossen von
 label.completedAt=Abgeschlossen am
 label.asOf=Startdatum
-label.noDispositionSchedule=Dispositionszyklus nicht vorhanden.
+label.noDispositionSchedule=Entsorgungszyklus nicht vorhanden.
 label.noEventsInDispositionSchedule=F\u00fcr Schritt ''{0}'' sind keine Ereignisse vorhanden.
-label.completeDispositionSchedule=Dispositionszyklus abgeschlossen.
-label.dispositionScheduleAppliedToFolder=Dispositionsplan auf Elternordner des Datensatzes angewendet, mit Startdatum: {0}.
+label.completeDispositionSchedule=Entsorgungszyklus abgeschlossen.
+label.dispositionScheduleAppliedToFolder=Entsorgungsplan auf Elternordner des Record angewendet, mit Startdatum{0}.
 label.linkToFoldersDispositionSchedule=Ereignisse von Elternordner anzeigen
 label.loadFailure=Ereignisse konnten nicht geladen werden.
 button.completeEvent=Ereignis abschlie\u00dfen
