--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_de.properties
@@ -6,7 +6,7 @@ label.to=Bis
 label.yes=Ja
 label.no=Nein
 label.button-cancel=Abbrechen
-button.view-record=Datensatz anzeigen
+button.view-record=Record anzeigen
 
 label.clear-log-title=Audit-Protokoll l\u00f6schen?
 label.clear-log-confirmation=M\u00f6chten Sie das Audit-Protokoll wirklich l\u00f6schen?
@@ -34,11 +34,11 @@ label.button-start=Starten
 label.button-view-log=Vollst\u00e4ndiges Protokoll anzeigen
 label.button-specify=Festlegen
 label.button-export=Exportieren
-label.button-file-record=Als Datensatz ablegen
+label.button-file-record=Als Record ablegen
 
-label.filed-log-message=Audit-Protokoll wurde als Datensatz abgelegt.
-message.file-log-fail=Beim Ablegen des Audits als Datensatz ist ein Fehler aufgetreten.
-label.file-record=Datensatz ablegen
+label.filed-log-message=Audit-Protokoll wurde als Record abgelegt.
+message.file-log-fail=Beim Ablegen des Audits als Record ist ein Fehler aufgetreten.
+label.file-record=Record ablegen
 
 
 label.timestamp=Zeitstempel
@@ -54,4 +54,7 @@ label.identifier=ID
 label.no-previous=<keine>
 
 node.root=Ablageplan
-title.single=Ort f\u00fcr Audit-Datensatz ausw\u00e4hlen
+title.single=Ort f\u00fcr Audit-Record ausw\u00e4hlen
+
+label.select.recordfolder.title=Record-Ordner ausw\u00e4hlen
+label.select.recordfolder.text=W\u00e4hlen Sie einen Record-Ordner aus.
