--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_de.properties
@@ -2,9 +2,9 @@ label.header-title=Audit
 
 label.yes=Ja
 label.no=Nein
-label.record=Datensatz
+label.record=Record
 label.button-cancel=Abbrechen
-button.view-record=Datensatz anzeigen
+button.view-record=Record anzeigen
 
 label.clear-log-title=Audit-Protokoll l\u00f6schen?
 label.clear-log-confirmation=M\u00f6chten Sie das Audit-Protokoll wirklich l\u00f6schen?
@@ -30,17 +30,17 @@ message.select-to-date=Enddatum ausw\u00e4hlen
 
 label.button-clear=L\u00f6schen
 label.button-stop=Stoppen
-label.button-start=Start
+label.button-start=Starten
 label.button-view-log=Vollst\u00e4ndiges Protokoll anzeigen
 label.button-specify=Festlegen
-label.button-export=Export
-label.button-file-record=Als Datensatz ablegen
+label.button-export=Exportieren
+label.button-file-record=Als Record ablegen
 label.button-apply=Anwenden
 label.button-details=Details
 
-label.filed-log-message=Audit-Protokoll wurde als Datensatz abgelegt.
-message.filing-log-fail=Beim Ablegen des Audits als Datensatz ist ein Fehler aufgetreten.
-label.file-record=Datensatz ablegen
+label.filed-log-message=Audit-Protokoll wurde als Record abgelegt.
+message.filing-log-fail=Beim Ablegen des Audits als Record ist ein Fehler aufgetreten.
+label.file-record=Record ablegen
 
 label.timestamp=Zeitstempel
 label.user=Benutzer
@@ -56,12 +56,12 @@ label.remove-filter=Filter entfernen
 label.default-message=Klicken Sie auf 'Anwenden', um das Audit-Protokoll anzuzeigen.
 
 node.root=Ablageplan
-title.single=Ort f\u00fcr Audit-Datensatz ausw\u00e4hlen
+title.single=Ort f\u00fcr Audit-Record ausw\u00e4hlen
 
 label.header-users=Benutzer
 label.header-entries=Anzahl Eintr\u00e4ge
 label.header-from=Von
-label.header-to=Zu
+label.header-to=Bis
 label.header-event=Ereignis
 label.header-property=Eigenschaft
 
