--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_de.properties
@@ -4,7 +4,7 @@ label.edit-metadata-title=Metadaten-Eigenschaft bearbeiten
 label.list-title=Objekt
 label.custom-metadata=Benutzerdefinierte Metadaten
 label.selection-list=Auswahlliste
-label.label=Label
+label.label=Bezeichnung
 label.use-list=Auswahlliste verwenden
 label.mandatory=Mandatory
 
@@ -20,7 +20,7 @@ message.create-failure=Die folgende neue benutzerdefinierte Eigenschaft konnte n
 message.edit-success=Benutzerdefinierte Eigenschaft erfolgreich gespeichert.
 message.edit-failure=Die folgende benutzerdefinierte Eigenschaft konnte nicht gespeichert werden: {0}
 message.delete.title=Benutzerdefinierte Eigenschaft l\u00f6schen
-message.delete.text=M\u00f6chten Sie Folgendes wirklich l\u00f6schen: {0}?
+message.delete.text=Wollen Sie wirklich l\u00f6schen: {0}?
 message.delete-success=Benutzerdefinierte Eigenschaft erfolgreich gel\u00f6scht.
 message.delete-failure=Die folgende benutzerdefinierte Eigenschaft konnte nicht gel\u00f6scht werden: {0}
 
