--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_de.properties
@@ -1,4 +1,4 @@
-message.get-roles-failure=Benutzerrollen konnten nicht abgerufen werden: {0}
+message.get-roles-failure=Folgende Benutzerrollen konnten nicht abgerufen werden: {0}
 message.get-role-failure=Funktionen f\u00fcr folgende Rolle konnten nicht abgerufen werden: {0}
 message.delete.success=Rolle erfolgreich gel\u00f6scht.
 message.delete.failure=Rolle konnte nicht gel\u00f6scht werden.
