--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_de.properties
@@ -2,7 +2,7 @@ label.viewevents.title=Ereignisse
 label.createevent.title=Neues Ereignis
 label.editevent.title=Ereignis bearbeiten
 label.general=Allgemein
-label.label=Label
+label.label=Bezeichnung
 label.type=Typ
 label.required=Pflichtfelder
 
