--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_de.properties
@@ -5,7 +5,7 @@ label.edit-references-title=Beziehung bearbeiten
 label.general=Allgemein
 label.type=Typ
 label.bidirectional=Bidirektional
-label.label=Label
+label.label=Bezeichnung
 label.parentchild=Eltern/Kind
 label.source=Quelle
 label.target=Ziel
