--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_de.properties
@@ -6,7 +6,7 @@ label.remove-group=Entfernen
 label.add-user=Hinzuf\u00fcgen
 label.remove-user=Entfernen
 
-message.get-roles-failure=Benutzerrollen konnten nicht abgerufen werden: {0}
+message.get-roles-failure=Folgende Benutzerrollen konnten nicht abgerufen werden: {0}
 
 message.load-peopleFinder-failure=Komponente 'Mitarbeiter-Finder' konnte nicht geladen werden.
 message.load-groupFinder-failure=Komponente 'Gruppen-Finder' konnte nicht geladen werden.
