--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_de.properties
@@ -1,8 +1,11 @@
 ## Buttons
 button.new-category=Neue Kategorie
 button.new-folder=Neuer Ordner
-button.upload=Datei
-button.import=Import
+button.new-unfiledRecords-folder=Neuer Ordner
+button.new-hold=Neue Sperre
+button.upload=Ablegen
+button.declare-record=Record deklarieren
+button.import=Importieren
 button.export-all=Alle exportieren
 button.manage-permissions=Berechtigungen verwalten
 button.up=Nach oben
@@ -14,7 +17,6 @@ button.fullscreen.enter=Vollbild
 button.fullscreen.exit=Vollbild verlassen
 button.setDefaultView=''{0}'' als Standard f\u00fcr diesen Ordner festlegen
 button.removeDefaultView=''{0}'' als Standard f\u00fcr diesen Ordner entfernen
-button.freeze.record=Datensatz/Datens\u00e4tze fixieren
 button.electronic=Elektronisch
 button.non-electronic=Nicht elektronisch
 button.report=Bericht
@@ -22,47 +24,55 @@ button.manage-rules=Regeln verwalten
 button.options=Optionen
 
 ## Dialog labels
-label.new-rma_recordCategory.title=Neue Datensatzkategorie
-label.new-rma_recordCategory.header=Details zur Datensatzkategorie
-label.new-rma_recordFolder.title=Neuer Datensatzordner
-label.new-rma_recordFolder.header=Details zum Datensatzordner
-label.new-rma_nonElectronicDocument.title=Nicht elektronischer Datensatz
-label.new-rma_nonElectronicDocument.header=Details zum Datensatz
+label.new-rma_recordCategory.title=Neue Record-Kategorie
+label.new-rma_recordCategory.header=Details zur Record-Kategorie
+label.new-rma_recordFolder.title=Neuer Record-Ordner
+label.new-rma_recordFolder.header=Details zum Record-Ordner
+label.new-rma_hold.title=Neue Sperre
+label.new-rma_hold.header=Details zu neuer Sperre
+label.new-rma_unfiledRecordFolder.title=Neuer Ordner
+label.new-rma_unfiledRecordFolder.header=Ordnerdetails
+label.new-rma_nonElectronicDocument.title=Nicht elektronischer Record
+label.new-rma_nonElectronicDocument.header=Details zum Record
 
 ## Drop-down Menus
-menu.selected-items=Ausgew\u00e4hlte Eintr\u00e4ge...
+menu.selected-items=Ausgew\u00e4hlte Elemente...
 menu.selected-items.deselect-all=Auswahl aufheben
 
-menu.selected-items.accession=Archivaufnahme
-menu.selected-items.accession-complete=Archivaufnahme-Best\u00e4tigung
+menu.selected-items.accession=Aufnahme
+menu.selected-items.accession-complete=Aufnahmebest\u00e4tigung
 menu.selected-items.copy-to=Kopieren nach...
 menu.selected-items.cutoff=Trennen
 menu.selected-items.delete=L\u00f6schen
 menu.selected-items.destroy=Vernichten
-menu.selected-items.export=Export
+menu.selected-items.export=Exportieren
 menu.selected-items.link-to=Link zu...
 menu.selected-items.file-to=Ablegen unter...
-menu.selected-items.freeze=Fixieren
 menu.selected-items.move-to=Verschieben nach...
 menu.selected-items.reviewed=\u00dcberpr\u00fcft
-menu.selected-items.transfer=\u00dcbertragung
+menu.selected-items.transfer=\u00dcbertragen
 menu.selected-items.transfer-complete=\u00dcbertragungsbest\u00e4tigung
-menu.selected-items.undo-cutoff=Trennen r\u00fcckg\u00e4ngig machen
-menu.selected-items.unfreeze=Fixierung aufheben
+menu.selected-items.undo-cutoff=Trennung aufheben
 
 ## Pop-up Messages
-message.file.type=Legen Sie einen elektronischen oder nicht elektronischen Datensatz ab?
+message.file.type=Legen Sie einen elektronischen oder nicht elektronischen Record ab?
 message.file.type.title=Ablagetyp
 message.multiple-delete.failure=Elemente konnten nicht gel\u00f6scht werden.
-message.multiple-delete.success={0} Datei(en) erfolgreich gel\u00f6scht
+message.multiple-delete.success={0} Element(e) erfolgreich gel\u00f6scht
 title.multiple-delete.confirm=Mehrfaches L\u00f6schen best\u00e4tigen
-message.multiple-delete.confirm=Sind Sie sicher, dass Sie die folgende {0} Dateien l\u00f6schen m\u00f6chten?
+message.multiple-delete.confirm=M\u00f6chten Sie die folgenden {0} Elemente wirklich l\u00f6schen?
 message.multiple-delete.please-wait=Bitte warten. Dateien werden gel\u00f6scht...
-message.new-folder.failure=Ordner konnte nicht erstellt werden.
-message.new-category.failure=Kategorie konnte nicht erstellt werden.
-message.new-folder.success=Ordner ''{0}'' erstellt
+message.new-unknown.error=Typ ''{0}'' ist unbekannt.
+message.new-category.failure=Kategorie ''{0}'' konnte nicht erstellt werden.
+message.new-folder.failure=Ordner ''{0}'' konnte nicht erstellt werden.
 message.new-record.failure=''{0}'' konnte nicht erstellt werden.
-message.new-record.success=Datensatz ''{0}'' erstellt.
+message.new-unfiledRecordsFolder.failure=Ordern mit nicht abgelegten Records ''{0}'' konnte nicht erstellt werden.
+message.new-hold.failure=Sperrbereich ''{0}'' konnte nicht erstellt werden.
+message.new-category.success=Kategorie ''{0}'' erstellt.
+message.new-folder.success=Ordner ''{0}'' erstellt.
+message.new-record.success=Record ''{0}'' erstellt.
+message.new-unfiledRecordsFolder.success=Ordner mit nicht abgelegten Records ''{0}'' erstellt.
+message.new-hold.success=Sperrbereich ''{0}'' erstellt.
 message.load-top-level-assets.failure=Vollst\u00e4ndiger Export nicht m\u00f6glich, da Assets auf oberster Ebene nicht geladen werden konnten.
 message.nothing-to-export=Keine zu exportierenden Elemente
 
@@ -72,13 +82,13 @@ description.path.more=
 description.savedsearch=Ergebnisse der gespeicherten Suche
 description.savedsearch.more=''{0}''
 description.transfers=\u00dcbertragungen
-description.transfers.more=(Datens\u00e4tze, die auf eine \u00dcbertragung oder Archivaufnahme warten)
+description.transfers.more=(Records, die auf eine \u00dcbertragung oder Aufnahme warten)
 description.transfers.more.filterDisplay=Derzeit angezeigt: ''{0}''
 description.holds=Aktive Sperren
-description.holds.more=(Fixierte Datens\u00e4tze und Datensatzordner)
+description.holds.more=(Gesperrte Records und Record-Ordner)
 description.holds.more.filterDisplay=Derzeit angezeigt: ''{0}''
-description.unfiledRecords=Nicht abgelegte Datens\u00e4tze
-description.unfiledRecords.more=(Datens\u00e4tze, die nicht abgelegt sind)
+description.unfiledRecords=Nicht abgelegte Records
+description.unfiledRecords.more=(Records, die nicht abgelegt sind)
 description.unfiledRecords.more.filterDisplay=Derzeit angezeigt: ''{0}''
 
 ## Browser dialogs
@@ -89,4 +99,4 @@ label.filter-description.zip=Archivpaket (.zip)
 # General
 message.loading=Ablageplan wird geladen...
 message.error=Auf Ablageplan konnte nicht zugegriffen werden.
-message.empty=Keine Dateien
+message.empty=Keine Elemente
