--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_de.properties
@@ -4,4 +4,4 @@ header.fileplan=Ablageplan
 ## Filters
 label.transfers=\u00dcbertragungen
 label.holds=Sperren
-label.unfiledRecords=Nicht abgelegte Datens\u00e4tze
+label.unfiledRecords=Nicht abgelegte Records
