--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_de.properties
@@ -9,8 +9,9 @@ label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} nach {1} {2}(s)
 label.title.new=Neuer Schritt
+label.ghostondestroy=Record-Metadaten nach dem L\u00f6schen beibehalten
 label.transferTo=\u00dcbertragen nach
-label.after=Nach einem Zeitraum von 
+label.after=Nach einem Zeitraum von
 label.from=von
 label.when=Bei Ereigniseintritt
 label.description=Schrittbeschreibung
@@ -33,7 +34,7 @@ button.createevent=Ereignis erstellen
 button.addaction=Schritt hinzuf\u00fcgen
 button.createaction=Schritt hinzuf\u00fcgen
 
-message.getActionFailure=Dispositionsplan konnte nicht ermittelt werden.
+message.getActionFailure=Entsorgungsplan konnte nicht ermittelt werden.
 message.savingAction=Schritt wird gespeichert.
 message.saveActionFailure=Dieser Schritt konnte nicht gespeichert werden.
 title.deleteAction=L\u00f6schen
