--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_de.properties
@@ -1,22 +1,22 @@
-disposition-schedule.heading=Dispositionsplan
+disposition-schedule.heading=Entsorgungsplan
 
 title.properties=Allgemein
-title.actions=Dispositionsschritte
+title.actions=Entsorgungsschritte
 
-label.dispositionAuthority=Dispositions-Authority
-label.dispositionInstructions=Dispositionsanweisungen
+label.dispositionAuthority=Entsorgungsinstanz
+label.dispositionInstructions=Entsorgungsanweisungen
 label.appliedTo=Angewendet auf
-label.appliedTo.record=Datensatz
+label.appliedTo.record=Record
 label.appliedTo.folder=Ordner
-label.noactions=Der Dispositionsplan weist keine Aktionen auf.
+label.noactions=Der Entsorgungsplan weist keine Aktionen auf.
 label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} nach {1} {2}(s)
-label.nodescription=<keine>
+label.nodescription=&lt;keine&gt;
 
 link.description=Beschreibung anzeigen
 
 button.addevent=Ereignis hinzuf\u00fcgen
 
-title.noDispositionSchedule=Keinen Dispositionsplan gefunden
-button.createDispositionSchedule=Dispositionsplan erstellen
+title.noDispositionSchedule=Keinen Entsorgungsplan gefunden
+button.createDispositionSchedule=Entsorgungsplan erstellen
