--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_de.properties
@@ -1,12 +1,12 @@
 label.user=Benutzer
 label.dateAndTime=Datum und Uhrzeit
 label.parentPath=Pfad
-label.recordSeriesIdentifier=ID der Datensatzserie
-label.recordCategoryIdentifier=ID der Datensatzkategorie
-label.recordFolderIdentifier=ID des Datensatzordners
-label.vitalRecordIndicator=Anzeige f\u00fcr erforderlichen Datensatz
-label.dispositionAuthority=Dispositions-Authority
+label.recordSeriesIdentifier=ID der Record-Serie
+label.recordCategoryIdentifier=ID der Record-Kategorie
+label.recordFolderIdentifier=ID des Record-Ordners
+label.vitalRecordIndicator=Kennzeichen f\u00fcr besonders relevante Records
+label.dispositionAuthority=Entsorgungsinstanz
 label.noDispositionAuthority=Keine
-label.dispositionSchedule=Dispositionsplan
+label.dispositionSchedule=Entsorgungsplan
 label.noActions=Keine Schritte
 label.noActionDescription=(keine Anweisung)
