--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_de.properties
@@ -6,5 +6,5 @@ label.new-reference=Neue Referenz
 label.no-references=Keine Referenzen
 message.delete.fail=Referenz konnte nicht gel\u00f6scht werden.
 message.delete.success=Referenz gel\u00f6scht
-label.references-from=Referenzen von anderen Datens\u00e4tzen
-label.references-to=Referenzen zu anderen Datens\u00e4tzen
+label.references-from=Referenzen von anderen Records
+label.references-to=Referenzen zu anderen Records
