--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_de.properties
@@ -1,6 +1,6 @@
 label.title-new-reference = Neue Referenz
 label.select = Ausw\u00e4hlen
-label.record-link = Link zu Datensatz
+label.record-link = Link zu Record
 label.record-rel = Beziehung
 label.name = Referenzname
 label.required = Pflichtfeld
