--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_de.properties
@@ -1,7 +1,7 @@
 header.condition.if=Wenn alle Kriterien erf\u00fcllt sind:
 header.condition.unless=Wenn nicht alle Kriterien erf\u00fcllt sind:
 menu.item.show-more=Mehr anzeigen...
-label.noRendererForType=Fehler: Kein Renderer f\u00fcr Typ ''{0}''
+label.noRendererForType=Fehler: kein Renderer f\u00fcr Typ ''{0}''
 label.is=ist
 label.sizeUnit=Bytes
 label.transientProperty={0} in {1}
@@ -11,7 +11,7 @@ message.getTagFailure=Tag konnte nicht geladen werden.
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
 form.control.date-picker.entry.date.format=d/M/yyyy
-form.control.date-picker.display.date.format=TT/MM/YYYY
+form.control.date-picker.display.date.format=TT/MM/JJJJ
 
 ## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under time entry field
