--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_de.properties
@@ -20,5 +20,5 @@ header.action=Aktion ausf\u00fchren
 message.creating=Regel wird erstellt...
 message.updating=Regel wird aktualisiert...
 message.persist-failure=Regel konnte nicht umgesetzt werden.
-message.createAnotherRule=Regel erfolgreich erstellt. 
+message.createAnotherRule=Regel erfolgreich erstellt 
 message.loading=Ablageplan wird geladen...
