--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_de.properties
@@ -1,4 +1,4 @@
-message.loading=Laden...
+message.loading=Ladevorgang wird durchgef\u00fchrt...
 message.empty=Keine Ergebnisse gefunden.
 message.error=Fehler w\u00e4hrend der Suche
 message.foundresults={0} Element(e) gefunden.
@@ -17,24 +17,25 @@ label.searchterm=Text abfragen
 label.criteria=Kriterien
 label.results=Ergebnisse
 label.insertfield=Feld einf\u00fcgen
-label.select=Ausw\u00e4hlen ...
+label.select=Ausw\u00e4hlen...
 label.insertdate=Datum einf\u00fcgen
 
-label.records=Datens\u00e4tze anzeigen (nur abgeschlossene)
+label.records=Records anzeigen (nur abgeschlossene)
 label.undeclared=Auch nicht abgeschlossene
-label.vital=Nur erforderliche anzeigen
-label.recordFolders=Datensatzordner anzeigen
-label.recordCategories=Datensatzkategorien anzeigen
-label.frozen=Nur fixierte anzeigen (ausgeschlossen, wenn nicht ausgew\u00e4hlt)
+label.vital=Nur besonders relevante anzeigen
+label.recordFolders=Record-Ordner anzeigen
+label.recordCategories=Record-Kategorien anzeigen
+label.frozen=Nur gesperrte anzeigen (ausgeschlossen, wenn nicht ausgew\u00e4hlt)
 label.cutoff=Nur getrennte anzeigen
 
 button.newsearch=Neue Suche
 button.savesearch=Suche speichern...
 button.savedsearches=Gespeicherte Suchen
 button.deletesearch=Suche l\u00f6schen
-button.print=Drucker-Layout
+button.print=Drucklayout
 button.screen=Bildschirm-Layout
-button.export=Export
+button.export=Exportieren
+button.add-to-hold=Zum Sperrbereich hinzuf\u00fcgen
 
 # RM Results Common
 label.options=Ergebnisoptionen
@@ -42,23 +43,23 @@ label.metadata=Metadaten
 label.order=Reihenfolge
 label.sortFirst=Zuerst nach
 label.sortNext=dann nach
-label.sortNone=(Kein)
+label.sortNone=(Keine)
 label.sortAscending=Aufsteigend
 label.sortDescending=Absteigend
-label.dueForReview=F\u00e4llige \u00dcberpr\u00fcfung
+label.dueForReview=F\u00e4llig zur \u00dcberpr\u00fcfung
 label.components=Komponenten
-label.recordSeries=Datensatzserien
+label.recordSeries=Record-Serien
 label.parentFolder=Elternordner
 
 
 # RMA search model metadata fields
-label.dispositionEvents=Dispositionsereignisse
-label.dispositionActionName=Name der Dispositionsaktion
-label.dispositionActionAsOf=Startdatum der Dispositionsaktion
-label.dispositionEventsEligible=Geeignete Dispositionsereignisse
-label.vitalRecordReviewPeriod=\u00dcberpr\u00fcfungszeitraum f\u00fcr erforderlichen Datensatz
-label.hasDispositionSchedule=Mit Dispositionsplan
-label.dispositionPeriod=Dispositionszeitraum
-label.dispositionInstructions=Dispositionsanweisungen
-label.dispositionAuthority=Dispositions-Authority
+label.dispositionEvents=Entsorgungsereignisse
+label.dispositionActionName=Name der Entsorgungsaktion
+label.dispositionActionAsOf=Startdatum der Entsorgungsaktion
+label.dispositionEventsEligible=Erlaubte Entsorgungsereignisse
+label.vitalRecordReviewPeriod=\u00dcberpr\u00fcfungszeitraum f\u00fcr besonders relevante Records
+label.hasDispositionSchedule=Mit Entsorgungsplan
+label.dispositionPeriod=Entsorgungszeitraum
+label.dispositionInstructions=Entsorgungsanweisungen
+label.dispositionAuthority=Entsorgungsinstanz
 label.holdReason=Sperrgrund
