--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_de.properties
@@ -22,7 +22,7 @@ message.maxFileFileSizeExceeded=Die Datei {0} ist zu gro\u00df ({1}), die maxima
 
 #button.selectFiles=Select files to upload
 
-section.version=Version Information
+section.version=Angaben zur Version
 label.version=Diese Version:
 label.minorVersion=kleine \u00c4nderungen
 label.majorVersion=bedeutende \u00c4nderungen
@@ -36,8 +36,8 @@ inmemory.uploadsize.exceeded=Ihr Browser unterst\u00fctzt keine Drag-and-Drop-Up
 
 
 # RM Specific properties
-header.multiUpload=Datens\u00e4tze ablegen
-button.selectFiles=Abzulegende Datens\u00e4tze ausw\u00e4hlen
+header.multiUpload=Records ablegen
+button.selectFiles=Abzulegende Records ausw\u00e4hlen
 
-header.import=Import
+header.import=Importieren
 button.selectImportFile=Zu importierende Datei w\u00e4hlen
