--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_de.properties
@@ -3,7 +3,7 @@ header.multiUpload=Datei(en) hochladen
 header.singleUpdate=Datei aktualisieren
 header.singleImport=Importieren
 
-section.recordType=Datensatztyp w\u00e4hlen
+section.recordType=Record-Typ w\u00e4hlen
 section.file=Datei(en) ausw\u00e4hlen
 
 label.browse=Datei(en) zum Hochladen ausw\u00e4hlen
@@ -19,7 +19,7 @@ label.uploadStatus=Status: {0}/{1} hochgeladen ({2} fehlgeschlagen)
 message.cancelStatus=Upload(s) abgebrochen; {0} Datei(en) hochgeladen
 message.zeroByteFileSelected=Sie haben die Datei {0} ausgew\u00e4hlt. Die Datei ist 0\u00a0Byte gro\u00df und kann nicht hochgeladen werden.
 message.flashError.title=Flash-Kommunikationsfehler
-message.flashError.message=Der Browser kann nicht mit dem Flash Uploader kommunizieren. Sie k\u00f6nnen weiterhin Dateien im Einzeldateien-Modus ablegen oder die Seite neu aufrufen, um Flash neu zu starten.
+message.flashError.message=Der Browser kann nicht mit dem Flash Uploader kommunizieren. Sie k\u00f6nnen weiterhin Records im Einzeldateien-Modus ablegen oder die Seite neu aufrufen, um Flash neu zu starten.
 
 section.version=Angaben zur Version
 label.version=Diese Version:
@@ -30,6 +30,6 @@ label.comments=Kommentare
 label.contentType=Inhaltstyp
 type.cm_content=Inhalt
 
-label.recordType=Datensatztyp(en)
+label.recordType=Record-Typ(en)
 label.recordType.description=Hinweis: Alle aufgef\u00fchrten Dateien werden als gew\u00e4hlte(r) Typ(en) markiert.
 recordType.default=Standard
