--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_de.properties
@@ -2,7 +2,7 @@ header.singleUpload=Datei hochladen
 header.singleUpdate=Datei aktualisieren
 header.singleImport=Importieren
 
-section.recordType=Datensatztyp w\u00e4hlen
+section.recordType=Record-Typ w\u00e4hlen
 section.file=Datei ausw\u00e4hlen
 
 label.singleUploadTip=Mit dem neuesten Flash Player k\u00f6nnen Sie mehrere Dateien parallel hochladen. \
@@ -25,5 +25,5 @@ message.failure=Dokument konnte nicht hochgeladen werden.
 label.contentType=Inhaltstyp
 type.cm_content=Inhalt
 
-label.recordType=Datensatztyp(en)
+label.recordType=Record-Typ(en)
 recordType.default=Standard
