--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/add-record-metadata.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/add-record-metadata.get_de.properties
@@ -1,2 +1,2 @@
-header=Datensatz-Metadaten hinzuf\u00fcgen
-label.record-type=Datensatztyp
+header=Record-Metadaten hinzuf\u00fcgen
+label.record-type=Record-Typ
