--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_de.properties
@@ -1,9 +1,7 @@
-header=Datensatzzielordner ausw\u00e4hlen
-
+header=Record-Zielordner ausw\u00e4hlen
 node.root=Ablageplan
-title.single={0} \u00dcbertragungsbericht ablegen unter...
+title.single=Bericht ablegen unter...
 button.file=Bericht ablegen
 message.no-files=Es muss zumindest eine Datei angegeben werden.
-message.please-wait=\u00dcbertragungsbericht wird abgelegt...
-message.success=\u00dcbertragungsbericht als {0} erfolgreich abgelegt. 
-message.failure=Die Ablageaktion konnte nicht abgeschlossen werden.
+message.please-wait=Bericht wird abgelegt...
+label.unfiled-records=Bericht unter 'Nicht abgelegte Records' abgelegt
