--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/document-details/document-references.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/document-details/document-references.get_de.properties
@@ -3,5 +3,5 @@ label.manage-references=Verwalten
 message.no-messages=Keine Referenzen vorhanden
 label.birelationship={0} von {1}
 label.parentrelationshp={0}
-label.references-from-this=Zu anderen Datens\u00e4tzen
-label.references-to-this=Von anderen Datens\u00e4tzen
+label.references-from-this=Zu anderen Records
+label.references-to-this=Von anderen Records
