--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_de.properties
@@ -1,10 +1,10 @@
-dataSet.header.title=Dataset importieren
-dataSet.label=Dataset
-dataSet.select.title=W\u00e4hlen Sie ein Dataset aus und klicken Sie auf 'Importieren', um die Testdaten zu laden.
-dataSet.select.label=Dataset ausw\u00e4hlen
+dataSet.header.title=Datensatz importieren
+dataSet.label=Datensatz
+dataSet.select.title=W\u00e4hlen Sie einen Datensatz aus und klicken Sie auf 'Importieren', um die Testdaten zu laden.
+dataSet.select.label=Datensatz ausw\u00e4hlen
 dataSet.importButton.text=Importieren
 dataSet.message.importing=Records Management Testdaten werden importiert. Bitte warten...
-dataSet.message.import-ok=Ausgew\u00e4hltes Dataset wurde erfolgreich importiert.
+dataSet.message.import-ok=Ausgew\u00e4hlter Datensatz wurde erfolgreich importiert.
 dataSet.message.import-fail=Testdaten konnten nicht in die Records Management Site importiert werden.
-dataset.not-rm-admin=Ihre Berechtigungsstufe ist zum Importieren eines Dataset nicht ausreichend.
+dataset.not-rm-admin=Ihre Berechtigungsstufe ist zum Importieren eines Datensatzes nicht ausreichend.
 dataset.not-rm-site=Dieses Dashlet kann nur f\u00fcr RM-Sites verwendet werden.
