--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_de.properties
@@ -1,20 +1,20 @@
 ## Title
 header.savedsearch=Gespeicherte Suchen
 
-rm.savedsearch.vitalRecordsName=Erforderliche Datens\u00e4tze mit f\u00e4lliger \u00dcberpr\u00fcfung
-rm.savedsearch.vitalRecordsDesc=Alle aktuell zum \u00dcberpr\u00fcfen f\u00e4lligen Datens\u00e4tze.
+rm.savedsearch.vitalRecordsName=Besonders relevante Records mit f\u00e4lliger \u00dcberpr\u00fcfung
+rm.savedsearch.vitalRecordsDesc=Alle aktuell zum \u00dcberpr\u00fcfen f\u00e4lligen Records.
 
-rm.savedsearch.incompleteRecordsName=Nicht abgeschlossene Datens\u00e4tze
-rm.savedsearch.incompleteRecordsDesc=Alle nicht abgeschlossenen Datens\u00e4tze.
+rm.savedsearch.incompleteRecordsName=Nicht abgeschlossene Records
+rm.savedsearch.incompleteRecordsDesc=Alle nicht abgeschlossenen Records.
 
-rm.savedsearch.cutoffRecordsName=F\u00fcr Trennen geeignete Datens\u00e4tze
-rm.savedsearch.cutoffRecordsDesc=Alle aktuell zum Trennen geeigneten Datens\u00e4tze.
+rm.savedsearch.cutoffRecordsName=Zur Trennung geeignete Records und Record-Ordner
+rm.savedsearch.cutoffRecordsDesc=Alle derzeit zur Trennung geeigneten Records und Record-Ordner.
 
-rm.savedsearch.transferRecordsName=F\u00fcr \u00dcbertragung geeignete Datens\u00e4tze
-rm.savedsearch.transferRecordsDesc=Alle aktuell zur \u00dcbertragung geeigneten Datens\u00e4tze.
+rm.savedsearch.transferRecordsName=Zur \u00dcbertragung geeignete Records und Record-Ordner
+rm.savedsearch.transferRecordsDesc=Alle aktuell zur \u00dcbertragung geeigneten Records und Record-Ordner.
 
-rm.savedsearch.destructionRecordsName=F\u00fcr Vernichtung geeignete Datens\u00e4tze 
-rm.savedsearch.destructionRecordsDesc=Alle aktuell zur Vernichtung geeigneten Datens\u00e4tze.
+rm.savedsearch.destructionRecordsName=Zur Vernichtung geeignete Records und Record-Ordner
+rm.savedsearch.destructionRecordsDesc=Alle aktuell zur Vernichtung geeigneten Records und Record-Ordner.
 
-rm.savedsearch.frozenRecordsName=Fixierte Datens\u00e4tze
-rm.savedsearch.frozenRecordsDesc=Alle fixierten Datens\u00e4tze.
+rm.savedsearch.frozenRecordsName=Gesperrte Records und Record-Ordner
+rm.savedsearch.frozenRecordsDesc=Alle gesperrten Records und Record-Ordner.
