--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_de.properties
@@ -1,11 +1,10 @@
 header.action=Aktion ausf\u00fchren
-button.freeze=Fixieren...
 button.reject=Ablehnen...
 button.requestInfo=Informationen anfordern...
-button.select-folder=Ausw\u00e4hlen ...
+button.select-folder=Ausw\u00e4hlen...
 button.message=Nachricht...
-button.addRecordTypes=Datensatztypen...
-menu.item.select=Ausw\u00e4hlen ...
+button.addRecordTypes=Record-Typen...
+menu.item.select=Ausw\u00e4hlen...
 
 label.setProperty.property=Festlegen von Eigenschaft:
 label.setProperty.value=auf:
@@ -15,18 +14,18 @@ dialog.destination.title=Zielordner ausw\u00e4hlen
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
 form.control.date-picker.entry.date.format=d/M/yyyy
-form.control.date-picker.display.date.format=TT/MM/YYYY
+form.control.date-picker.display.date.format=TT/MM/JJJJ
 
 ## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under time entry field
 form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Stunden)
 
-record.folder.path.title=Hier klicken, um Hilfetext f\u00fcr das Datensatzordnerpfad-Feld anzuzeigen.
+record.folder.path.title=Hier klicken, um Hilfetext f\u00fcr das Record-Ordnerpfad-Feld anzuzeigen.
 record.folder.path.help=<p>Die folgenden Ersetzungen sind zul\u00e4ssig:</p>\
    <p></p>\
-   <p>date.day.short = Son</p>\
-   <p>date.day = Son</p>\
+   <p>date.day.short = So</p>\
+   <p>date.day = So</p>\
    <p>date.day.long = Sonntag</p>\
    <p>date.day.number = 7 (1-7)</p>\
    <p>date.day.year = 216 (001-365)</p>\
