--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_de.properties
@@ -3,8 +3,9 @@ header=Zielordner w\u00e4hlen
 
 ## Copy To
 copy.node.root=Ablageplan
-copy.title.single={0} kopieren nach...
-copy.title.multi={0} Elemente kopieren nach...
+copy.node.unfiledroot=Nicht abgelegte Records
+copy.title.single=Kopieren {0} nach...
+copy.title.multi=Kopiere {0} Objekte nach...
 copy.button=Kopieren
 copy.message.no-files=Es muss zumindest eine Datei angegeben werden.
 copy.message.please-wait=Dateien werden kopiert...
@@ -13,8 +14,9 @@ copy.message.failure=Elemente konnten nicht kopiert werden.
 
 ## Move To
 move.node.root=Ablageplan
-move.title.single={0} verschieben nach...
-move.title.multi={0} Elemente verschieben nach...
+move.node.unfiledroot=Nicht abgelegte Records
+move.title.single=Verschiebe {0} nach...
+move.title.multi=Verschiebe {0} Objekte nach...
 move.button=Verschieben
 move.message.no-files=Es muss zumindest eine Datei angegeben werden.
 move.message.please-wait=Dateien werden verschoben...
@@ -23,6 +25,7 @@ move.message.failure=Elemente konnten nicht verschoben werden.
 
 ## Link To
 link.node.root=Ablageplan
+link.node.unfiledroot=Nicht abgelegte Records
 link.title.single={0} verkn\u00fcpfen mit...
 link.title.multi={0} Elemente verkn\u00fcpfen mit...
 link.button=Verkn\u00fcpfen
@@ -33,6 +36,7 @@ link.message.failure=Elemente konnten nicht verkn\u00fcpft werden.
 
 ## File To
 file.node.root=Ablageplan
+file.node.unfiledroot=Nicht abgelegte Records
 file.title.single={0} ablegen unter...
 file.title.multi={0} Elemente ablegen unter...
 file.button=Ablegen
